--- a/composer.json
+++ b/composer.json
@@ -1,17 +1,21 @@
 {
-  "name": "littlegiant/silverstripe-youtubefeed",
-  "type": "silverstripe-module",
-  "description": "YouTubeFeed requests videos from an authenticated YouTube 'My Uploads' feed and converts them into YouTubeVideo DataObjects.",
-  "license": "MIT",
-  "authors": [
-    {
-      "name": "Oliver Shaw",
-      "email": "oliver.shaw@littlegiant.co.nz",
-      "role": "Developer"
-    }
-  ],
-  "require": {
-    "google/apiclient": "1.1.4",
-    "silverstripe/framework": "~3.1"
-  }
+    "name": "littlegiant/silverstripe-youtubefeed",
+    "type": "silverstripe-module",
+    "description": "YouTubeFeed requests videos from an authenticated YouTube 'My Uploads' feed and converts them into YouTubeVideo DataObjects.",
+    "license": "MIT",
+    "authors": [
+        {
+            "name": "Oliver Shaw",
+            "email": "oliver.shaw@littlegiant.co.nz",
+            "role": "Developer"
+        }
+    ],
+    "require": {
+        "google/apiclient": "1.1.4",
+        "silverstripe/framework": "~3.1"
+    },
+    "support": {
+        "issues": "https://github.com/Little-Giant/silverstripe-youtubefeed/issues"
+    },
+    "homepage": "https://github.com/Little-Giant/silverstripe-youtubefeed"
 }
